force-app/main/default/objects/Quiz__c/fields/Question_02__c.field-meta.xml
<CustomField>
    <fullName>Question_02__c</fullName>
    <label>Question_02</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Até 1 ano.</fullName>
            </value>
            <value>
                <fullName>1 a 5 anos.</fullName>
            </value>
            <value>
                <fullName>Mais de 5 anos.</fullName>
            </value>
            <value>
                <fullName>Essa reserva não será utilizada, a não ser em caso de emergência.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>