force-app/main/default/objects/Quiz__c/fields/Question_03__c.field-meta.xml
<CustomField>
    <fullName>Question_03__c</fullName>
    <label>Question_03</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preciso desse dinheiro como complemento de renda.</fullName>
            </value>
            <value>
                <fullName>Eventualmente posso precisar utilizar uma  parte dele.</fullName>
            </value>
            <value>
                <fullName>Não tenho necessidade imediata desse dinheiro.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>